[project]
name = "bloqade-analog-examples"
version = "0.2.0"
description = "Bloqade Analog Examples"
authors = [
    {name = "QuEra Computing Inc.", email = "info@quera.com"},
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "Apache License 2.0"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bloqade"]

[tool.black]
line-length = 88

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.9.
target-version = "py39"

[tool.jupytext]
formats = "ipynb,py:percent"
hide_notebook_metadata = false

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.10",
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "jupytext>=1.16.6",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest-recording>=0.13.2",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
    "vcrpy>=7.0.0",
    "pyinstrument>=5.0.0",
    "scikit-optimize>=0.10.2",
    "matplotlib>=3.9.4",
    "icecream>=2.1.3",
    "tqdm>=4.67.1",
    "rust-just>=1.39.0",
]
doc = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.1.9",
    "mkdocstrings[python]>=0.21.2",
    "mkdocs-minify-plugin>=0.6.4",
    "mkdocs-jupyter>=0.24.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mike>=1.1.2",
    "matplotlib>=3.8.0",
    "neoteroi-mkdocs>=1.0.4",
    "numpy>=1.25.2",
    "bloqade-analog>=0.16.0",
]
